# bls-stats-aggregation

./: .coverage  .env  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  scratch.ipynb
.cache/bls/: qcew_2018_1_industry_10.csv  qcew_2018_1_industry_1013.csv  qcew_2018_1_industry_1021.csv  qcew_2018_1_industry_21.csv  qcew_2018_1_industry_22.csv  qcew_2018_1_industry_23.csv  qcew_2018_1_industry_42.csv  qcew_2018_1_industry_51.csv  qcew_2018_1_industry_52.csv  qcew_2018_1_industry_53.csv  qcew_2018_1_industry_54.csv  qcew_2018_1_industry_55.csv  qcew_2018_1_industry_56.csv  qcew_2018_1_industry_61.csv  qcew_2018_1_industry_62.csv  qcew_2018_1_industry_71.csv  qcew_2018_1_industry_72.csv  qcew_2018_1_industry_81.csv  qcew_2023_1_industry_1012.csv  qcew_2023_1_industry_1013.csv  qcew_2023_1_industry_1021.csv  qcew_2023_1_industry_1022.csv  qcew_2023_1_industry_1023.csv  qcew_2023_1_industry_1024.csv  qcew_2023_1_industry_1025.csv  qcew_2023_1_industry_1026.csv  qcew_2023_1_industry_1027.csv  qcew_2023_1_industry_1028.csv  qcew_2023_1_industry_1029.csv  qcew_2023_2_industry_10.csv  qcew_2023_2_industry_1012.csv  qcew_2023_2_industry_1013.csv  qcew_2023_2_industry_1021.csv
archive/specs/: jolts_todo.md
data/: jolts.parquet  qcew_bulk.parquet
docs/: index.md  user-guide.md
docs/api/: download.md  geography.md  http_client.md  industry.md  jolts.md  mapping.md  (+2 more)
site/: 404.html  index.html  objects.inv
tests/: conftest.py  test_bed.py  test_cli.py  test_download.py  test_geography.py  test_http_client.py  test_industry.py  test_jolts.py  test_mapping.py  test_sae.py
(+39 files in other folders)
