[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bls-stats-aggregation"
version = "0.2.0"
description = "Map BLS program data to CES industry groups"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "typer>=0.12",
]

[project.scripts]
bls-stats = "bls_stats_aggregation.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
trino = [
    "trino>=0.328",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bls_stats_aggregation"]
